k8s/app/buildit_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: buildit-deployment
  name: buildit-svc
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: buildit-deployment
  type: NodePort
status:
  loadBalancer: {}
