k8s/app/buildit_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: krystian-test.sandbox.tensrv.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: buildit-svc
            port:
              number: 31346
